--- a/promtail-config.yaml
+++ b/promtail-config.yaml
@@ -1,14 +1,14 @@
 server:
-http_listen_port: ${PORT}
+  http_listen_port: ${PORT}
 
 positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: $LOKI_URL
+  - url: ${LOKI_URL}
     basic_auth:
-      username: $LOKI_USERNAME
-      password: $LOKI_PASSWORD
+      username: ${LOKI_USERNAME}
+      password: ${LOKI_PASSWORD}
 
 scrape_configs:
   - job_name: heroku
@@ -16,6 +16,10 @@ scrape_configs:
       labels:
         job: heroku
         app: tmi-server
+        environment: heroku
+        source: heroku-dyno
     relabel_configs:
-      - source_labels: [app]
+      - source_labels: [__heroku_drain_dyno]
+        target_label: dyno
+      - source_labels: [__heroku_drain_app]
         target_label: heroku_app
